[gd_scene load_steps=6 format=3 uid="uid://dhqtgucesugtn"]

[ext_resource type="Script" path="res://src/scripts/Lesson/Prelim/Prelim_1.13.gd" id="1_5rbw7"]
[ext_resource type="Texture2D" uid="uid://byio0luq7uppw" path="res://assets/images/Background/StarField.png" id="1_nmbt2"]
[ext_resource type="PackedScene" uid="uid://r7v4w30c0k7l" path="res://src/scenes/Components/Pause.tscn" id="2_acwx1"]
[ext_resource type="PackedScene" uid="uid://c8lo8combalxg" path="res://src/scenes/Components/NavigationControls.tscn" id="4_iwv35"]
[ext_resource type="Texture2D" uid="uid://hwhc2wv0o228" path="res://assets/images/Lesson/Prelim/prelim_1.13.png" id="5_bpe48"]

[node name="Prelim1_13" type="Node2D"]
script = ExtResource("1_5rbw7")

[node name="StarField" type="Sprite2D" parent="."]
position = Vector2(963.999, 541.998)
scale = Vector2(1.88281, 1.05859)
texture = ExtResource("1_nmbt2")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 68.0
offset_top = 162.0
offset_right = 1500.0
offset_bottom = 1019.0
theme_override_constants/separation = 30

[node name="Header" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 80
text = "Rich Text"
fit_content = true

[node name="DetailOne" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "Rich Text"
fit_content = true

[node name="DetailTwo" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "Rich Text"
fit_content = true

[node name="DetailThree" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "Rich Text"
fit_content = true

[node name="DetailFour" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "Rich Text"
fit_content = true

[node name="NavigationControls" parent="." instance=ExtResource("4_iwv35")]
visible = false
previous_scene_path = "res://src/scenes/Lesson/Prelim/Prelim_1.12.tscn"
next_scene_path = "res://src/scenes/Lesson/Prelim/Prelim_1.14.tscn"

[node name="Prelim1_13" type="Sprite2D" parent="."]
position = Vector2(1712, 490)
texture = ExtResource("5_bpe48")

[node name="Pause" parent="." instance=ExtResource("2_acwx1")]